# meetingkb

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
deploy/: docker-compose.yml
docs/screenshots/: README.md
sample_data/: README.md
sample_data/transcripts/: Planning 02.02.2026 14-30-00.json  Team Sync 01.02.2026 10-00-00.json
src/meetingkb/: __init__.py  cli.py  config.py  context.py  models.py
src/meetingkb/ingest/: gen_thumbnails.py  indexer.py  thumbnails.py  transcriber.py  transcripts.py  watcher.py
src/meetingkb/rag/: __init__.py  client.py  context.py
src/meetingkb/search/: __init__.py  backend.py  opensearch_backend.py  query.py  service.py  storage.py
src/meetingkb/web/: __init__.py  app.py  assets.py  media_server.py
src/meetingkb/web/assets/: player.html
tests/: conftest.py  playwright_smoke_test.py  smoke_test.py  test_auto_ingest.py  test_cli.py  test_compose.py  test_config.py  test_context.py  test_doc_values_golden.py  test_indexer.py  test_indexer_opensearch.py  test_mappings_golden.py  test_media_server.py  test_media_server_allowlist.py  test_models.py  test_opensearch_backend.py  test_packaging.py  test_query.py  test_rag_client.py  test_rag_context.py  test_ranking_order.py  test_result_rendering.py  test_search_service_opensearch.py  test_search_term_filter.py  test_storage.py  test_thumbnails.py  test_thumbnails_ffmpeg.py  test_transcriber.py  test_transcripts.py
tests/fixtures/: sample.json
