[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meetingkb"
version = "0.1.0"
description = "Local knowledge base for meeting recordings: transcribe, index, search, and ask."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MeetingKB contributors" }]
keywords = ["meetings", "transcription", "search", "rag", "whisper", "opensearch"]
dependencies = [
    "streamlit>=1.36",
    "requests>=2.31",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
]

[project.optional-dependencies]
transcribe = ["faster-whisper>=1.0"]
dev = ["pytest>=8.0", "ruff>=0.5", "playwright>=1.44"]

[project.scripts]
kb = "meetingkb.cli:app"

[project.urls]
Homepage = "https://github.com/ryletko/meetingkb"
Repository = "https://github.com/ryletko/meetingkb"

[tool.hatch.build.targets.wheel]
packages = ["src/meetingkb"]

[tool.hatch.build.targets.wheel.force-include]
"src/meetingkb/web/assets/player.html" = "meetingkb/web/assets/player.html"
"src/meetingkb/web/assets/plyr.css" = "meetingkb/web/assets/plyr.css"
"src/meetingkb/web/assets/plyr.min.js" = "meetingkb/web/assets/plyr.min.js"
"src/meetingkb/web/assets/plyr.svg" = "meetingkb/web/assets/plyr.svg"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
# The Streamlit UI embeds a verbatim CSS stylesheet (KB_CSS) and ported HTML
# builders whose long lines are kept byte-for-byte; line length is not enforced.
"src/meetingkb/web/app.py" = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: needs OpenSearch/GPU/ffmpeg/LLM (excluded by default)"]
addopts = "-m 'not integration'"
